Fixed vertical align issues on launch

--- a/_includes/css/flipclock.css
+++ b/_includes/css/flipclock.css
@@ -1,3 +1,9 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
 /* LAUNCH PAGE */
 
 .launch-bg {
@@ -9,14 +15,19 @@
 }
 
 .lvl-14 {
-  margin: 0 auto;
-  padding-top: 8em;
-  text-align: center;
+  display: table;
+}
+
+.cell {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .logo-img {
-  width: 100%;
+  width: 35%;
   display: block;
+  margin: 0 auto;
+  padding-top: 1em;
 }
 
 .info {
@@ -103,7 +114,7 @@ h2 {
 .flip-clock-wrapper {
   text-align: center;
   position: relative;
-  padding-bottom: 6em;
+  padding-bottom: 4em;
 }
 
 .flip-clock-wrapper:before,
@@ -492,9 +503,9 @@ h2 {
     background-color: #01ADD0;
   }
 
-.flip-clock-wrapper {
-  padding-bottom: 0em;
-}
+  .flip-clock-wrapper {
+    padding-bottom: 0em;
+  }
 
   .flip-clock-wrapper ul {
     display: inline-block;
@@ -503,9 +514,9 @@ h2 {
   }
 
   .flip-clock-divider {
-  height: 100px;
-  margin-top: 0px;
-}
+    height: 100px;
+    margin-top: 0px;
+  }
 
 .flip-clock-dot {
   display: block;
@@ -517,18 +528,19 @@ h2 {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   left: 5px; }
 
-  .top {
-    display: none;
-  }
-
   .logo-img {
-    padding-bottom: 2.5em;
+    width: 30%;
+    display: block;
+    padding-bottom: 2em;
   }
 
-  .lvl-14 {
-    padding: 3em 3em 2em 3em;
-    margin-top: 300px;
-    text-align: center;
+    .className{
+    width:100%;
+    height:150px;
+    position:absolute;
+    left:0;
+    top: 25%;
+    margin:0px 0 0 0px;
   }
 
   .info {
@@ -537,121 +549,75 @@ h2 {
   }
 
   .info p {
-    letter-spacing: 0.1em;
     color: #FFFFFF;
     line-height: 0.5em;
   }
-
-  h2 {
-    letter-spacing: 0.02em;
-  }
-
-.links {
-  display: inline-block;
-  margin-top: 105px;
-}
-
-.links {
-  padding: 20px;
-  background-color: #ccc;
-  margin-left: 10px;
-}
-
-  footer {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 35em) {
-  .lvl-14 {
-    margin-top: 220px;
+  
+  .social-footer {
+    width: 100%;
+    top: 97%;
+    position: fixed;
   }
 
   .links {
-    margin-top: 34.6%;
+    padding: 20px;
+    margin-left: 10px;
   }
 }
 
-@media only screen and (min-width: 41em) {
-  .lvl-14 {
-    margin-top: 220px;
-  }
-
-  .links {
-    margin-top: 29.4%;
-  }
-}
-
-@media only screen and (min-width: 47em) {
-  .lvl-14 {
-    margin-top: 225px;
-  }
-
-  .links {
-    margin-top: 24.9%;
-  }
-}
-
-@media only screen and (min-width: 53em) {
-  .logo-img {
-    margin-top: -70px;
-  }
-
-  .lvl-14 {
-    margin-top: 290px;
-  }
-
-  .links {
-    margin-top: 22%;
-  }
-}
-
-@media only screen and (min-width: 60em) {
-  .logo-img {
+/* 580 PX */
+@media only screen and (min-width: 36em) {
+ .logo-img {
+    width: 25%;
     display: block;
-    width: 18%;
-    margin: 0 auto;
+    padding-bottom: 2em;
   }
 
-  .lvl-14 {
-    margin-top: 220px;
+    .className{
+    width:100%;
+    height:150px;
+    position:absolute;
+    left:0;
+    top: 25%;
+    margin:0px 0 0 0px;
+  }
+}
+
+/* 780 PX */
+@media only screen and (min-width: 48em) {
+  .logo-img {
+    width: 20%;
   }
 
-  .links {
-  display: inline-block;
-  margin-top: 19.95%;
-}
+  .social-footer {
+    top: 97.1%;
+  }
 }
 
+/*880 PX*/
+@media only screen and (min-width: 55em) {
+  .logo-img {
+    width: 17%;
+  }
+}
+
+/* 1080 PX */
+@media only screen and (min-width: 67em) {
+  .logo-img {
+    width: 15%;
+  }
+}
+
+/* 1280 PX */
+@media only screen and (min-width: 80em) {
+  .logo-img {
+    width: 12%;
+  }
+}
+
+/* 1440 PX */
 @media only screen and (min-width: 90em) {
   .logo-img {
-    display: block;
-    width: 12%;
-    margin: 0 auto;
-  }
-
-  .lvl-14 {
-    margin-top: 215px;
-  }
-
-  .links {
-  display: inline-block;
-  margin-top: 13.6%;
-}
-}
-
-
-@media only screen and (min-width: 119em) {
-  .logo-img {
-    width: 9%;
-  }
-
-  .lvl-14 {
-    margin-top: 215px;
-  }
-
-  .links {
-    margin-top: 10.15%;
+    width: 10%;
   }
 }
-
